--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.1.0",
+    "cors": "^2.8.5",
+    "gsap": "^3.12.5",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5"
   },
