--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.1.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "cors": "^2.8.5",
     "gsap": "^3.12.5",
     "vue": "^3.5.13",
